# nova

./: .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  README.md
.github/: sync-files.yaml
.github/workflows/: cppcheck-differential.yaml  cppcheck-weekly.yaml
nova_cmake/: CMakeLists.txt  nova_cmake-extras.cmake  package.xml
nova_cmake/cmake/: FindLibJpegTurbo.cmake  FindNVJPEG.cmake  nova_package.cmake
nova_common/: CMakeLists.txt  package.xml
nova_common/include/nova_common/: datatype.hpp  format.hpp  helper.hpp
nova_compression/: CMakeLists.txt  README.md  package.xml
nova_compression/include/nova_compression/: builder.hpp  jpeg_encoder.hpp
nova_compression/src/: jpeg_encoder.cpp
nova_compression/test/: test_cpu_jpeg_encoder.cpp
nova_example/: CMakeLists.txt  README.md  package.xml
nova_example/include/nova_example/: listener.hpp  talker.hpp
nova_example/src/: listener.cpp  talker.cpp
nova_msgs/: CMakeLists.txt  package.xml
nova_pipeline/: CMakeLists.txt  README.md  package.xml
nova_pipeline/include/nova_pipeline/: builder.hpp  rectifier.hpp
nova_pipeline/src/: rectifier.cpp
nova_pipeline/test/: test_rectifier_cpu.cpp
nova_ros/: CMakeLists.txt  package.xml  plugin_description.xml
nova_ros/config/: imgproc_node.param.yaml
nova_ros/include/nova_ros/: compressed_video_publisher.hpp  compressed_video_subscriber.hpp  imgproc_node.hpp  parameter_definition.hpp  publisher.hpp  qos.hpp  subscriber.hpp  task_queue.hpp  taske_queue.hpp  utility.hpp
nova_ros/src/: compressed_video_publisher.cpp  compressed_video_subscriber.cpp  imgproc_node.cpp  manifest.cpp  parameter_definition.cpp  publisher.cpp  qos.cpp  subscriber.cpp
