<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nova_example</name>
  <version>0.0.0</version>
  <description>Example ROS 2 package for NOVA</description>
  <maintainer email="kotaro.uetake@tier4.jp">kotarouetake</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>nova_cmake</buildtool_depend>

  <depend>nova_common</depend>
  <depend>nova_msgs</depend>
  <depend>nova_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
