<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nova_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 modules for NOVA</description>
  <maintainer email="kotaro.uetake@tier4.jp">ktro2828</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>nova_cmake</buildtool_depend>

  <depend>ffmpeg_encoder_decoder</depend>
  <depend>image_transport</depend>
  <depend>nova_compression</depend>
  <depend>nova_msgs</depend>
  <depend>nova_pipeline</depend>
  <depend>pluginlib</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
